@@ -13,9 +13,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>15</java.version>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <java.version>18</java.version>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
         <jetty.version>9.4.27.v20200227</jetty.version>
     </properties>
 
@@ -140,10 +140,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>15</release>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
+                    <release>18</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -171,9 +168,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <!-- newer version work well with JUnit5 -->
                 <version>2.22.2</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
         <finalName>app</finalName>
